[package]
name = "huhnitor"
version = "2.0.0"
authors = ["James M <james@jamz.dev>"]
description = "Intergalactic serial monitor"
readme = "README.md"
documentation = "https://github.com/SpacehuhnTech/Huhnitor"
edition = "2018"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-serial = "5.4.4"

serialport = "4.3.0"
futures = "0.3.5"
bytes = "1.6.0"
webbrowser = "1.0.1"
lazy_static = "1.4.0"
structopt = "0.3.15"

regex = "1.3.9"
termcolor = "1.1"
rustyline = "14.0.0"
crossterm = "0.27.0"
ratatui = "0.26.1"
unicode-width = "0.1.11"